--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/js/uikit.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/js/uikit-icons.min.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
